# adaptive_component

./: CHANGELOG.rst  CMakeLists.txt  QUALITY_DECLARATION.md  README.md  package.xml
include/: adaptive_component.hpp
src/: adaptive_component.cpp
